# NikiScript

./: CMakeLists.txt  todo.md
CSBindings/: CSBindings.csproj  CSBindings.sln  NikiScript.cs  NikiScriptLibrary.cs  Program.cs  Std.cs
examples/BasicExample/src/: Main.cpp
examples/JobSystem/src/: Main.cpp
include/NikiScript/: API.h  CS.h  Command.h  CommandHandler.h  Context.h  Lexer.h  NikiScript.h  Parser.h  Print.h  PrintCallback.h  ProgramVariable.h  Token.h  Utils.h
src/: Command.cpp  Context.cpp  NikiScript.cpp  Parser.cpp  Print.cpp  ProgramVariable.cpp  Token.cpp
